[FIX] 모델 등록 로직 개발